add cytoscape interface

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.26.0/cytoscape.min.js"></script>
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -25,9 +26,12 @@
     </div>
 
     <div id="error-output" class="error-text"></div>
-    
+
     <div id="matrix-container"></div>
+
+    <div id="cy"></div>
 
     <script src="app.js" type="module"></script>
 </body>
+
 </html>
