--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <label for="col-input">Column Sums:</label>
         <input type="text" id="col-input" class="input-box" value="1, 1, 1, 2, 1">
         <br><br>
-        <input type="checkbox" id="fix-option">
-        <label for="fix-option"> Fix matrix if invalid?</label>
+        <!-- <input type="checkbox" id="fix-option">
+        <label for="fix-option"> Fix matrix if invalid?</label> -->
         <br><br>
         <button id="generate_button" class="generate-btn">Generate Matrix</button>
     </div>
